--- a/pom.xml
+++ b/pom.xml
@@ -8,30 +8,40 @@
 	<name>personal_project_demo_e-commerce_website</name>
 	<description>Automation Framework for demo e-commerce website -
 		http://www.automationpractice.pl/</description>
-		
-		<build>
-		
-		<plugins>
-  
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.5.3</version>
-        <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
-          <systemPropertyVariables>
-            <browser>$(browser)</browser>
-            <isLambdaTest>$(isLambdaTest)</isLambdaTest>
-            <isHeadless>$(isHeadless)</isHeadless>
-          </systemPropertyVariables>
-        </configuration>
-      </plugin>
 
-</plugins>
-		
-		</build>
+	<build>
+
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.14.0</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.3</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+					<systemPropertyVariables>
+						<browser>$(browser)</browser>
+						<isLambdaTest>$(isLambdaTest)</isLambdaTest>
+						<isHeadless>$(isHeadless)</isHeadless>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+	</build>
 
 	<dependencies>
 		<!--
