--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,13 +33,28 @@ jobs:
          name: Test logs
          Path: logs/
 
-    - name: Upload Test Reports
+    - name: Upload Screenshots as Artifacts
       if: always()
       uses: actions/upload-artifact@v4.6.2
       with:
-        name: Test Reports
+         name: screenshots
+         Path: screenshots/
+
+    - name: Upload HTML Reports as Artifacts
+      if: always()
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        name: html-Report
         Path: report.html
 
     - name: Test Execution status
+      if: always()
       run: echo "Test Execution Completed"
+
+    - name: Copy Report to github-pages Folder
+      if: always()
+
+      run:
+        mkdir -p public/extents-reports
+        
   
